# obsidian-llm-wiki

./: .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FIX_v0.2.2.md  KARPATHY_ANALYSIS.md  LICENSE  NOTICE  README.md  README_CN.md  README_DE.md  README_JA.md  README_KO.md  ROADMAP.md  TESTING.md  USAGE_v0.2.0.md  esbuild.config.mjs  eslint.config.mjs  main.ts  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  recursive-wiki-plan.md  styles.css  tsconfig.json  versions.json  vitest.config.ts
.github/: FUNDING.yml
docs/: MODEL-GUIDE.md  OBSIDIAN_SUBMISSION_GUIDE.md  PDF-OCR-GUIDE.md  README.zh-Hant.md  README_CN.md  README_DE.md  README_ES.md  README_FR.md  README_IT.md  README_JA.md  README_KO.md  README_PT.md  README_ZH-Hant.md  SECURITY.md  USAGE.md
python_lib/: .gitignore  README.md  pyproject.toml
python_lib/examples/: .env.example  build_hierarchy_rits.py
python_lib/llm_wiki/: __init__.py  constants.py  facade.py  llm_client.py  types.py
python_lib/llm_wiki/core/: __init__.py  batch_processing.py  frontmatter.py  json_parser.py  markdown.py  slug.py  sse_parser.py
python_lib/llm_wiki/wiki/: __init__.py  engine.py  prompts.py  source_analyzer.py
python_lib/llm_wiki/wiki/lint/: __init__.py  controller.py  dead_link_detector.py  duplicate_detection.py  fixes.py  orphan_matcher.py  prompt_builders.py  prompts.py  scanners.py
scripts/: css-lint.mjs  eval-recall.ts  update-fixture.mjs
src/: auto-maintain.ts  constants.ts  llm-client-wrapper.ts  llm-client.ts  main.ts  modals.ts  prompts.ts  query-engine.ts  texts.ts  (+5 more)
(+479 files in other folders)
