[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-wiki"
version = "1.22.1"
description = "LLM-powered knowledge wiki generator — Python port of obsidian-llm-wiki"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Greener-Dalii" }]
keywords = ["llm", "wiki", "knowledge-base", "openai", "anthropic", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup :: Markdown",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
]
examples = [
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_wiki*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
